--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.4.1",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "bcrypt-ts": "^6.0.0",
     "flatpickr": "^4.6.13",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -29,7 +33,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
-    "swiper": "^11.2.0",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
@@ -43,6 +47,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
