--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
-    "@tiptap/extension-bold": "^2.11.5",
     "@tiptap/extension-bullet-list": "^2.11.5",
     "@tiptap/extension-code": "^2.11.5",
     "@tiptap/extension-code-block": "^2.11.5",
+    "@tiptap/extension-code-block-lowlight": "^2.11.5",
     "@tiptap/extension-document": "^2.11.5",
+    "@tiptap/extension-floating-menu": "^2.11.5",
     "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-image": "^2.11.5",
     "@tiptap/extension-italic": "^2.11.5",
@@ -40,6 +41,7 @@
     "autoprefixer": "^10.4.20",
     "bcrypt-ts": "^6.0.0",
     "flatpickr": "^4.6.13",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.476.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
