--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@hookform/resolvers": "^4.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.1",
     "@react-jvectormap/core": "^1.0.4",
@@ -39,6 +40,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
     "bcrypt-ts": "^6.0.0",
     "flatpickr": "^4.6.13",
     "lowlight": "^3.3.0",
@@ -52,9 +54,12 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-quill": "^2.0.0",
     "swiper": "^11.2.4",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
